# projects

./: pyproject.toml
DocsQnA/: main.ipynb  main.py  pyproject.toml
FastAPI_tut/: pyproject.toml
RAGAPP/RAGApp.git/: packed-refs
RAGAPP/RAGApp.git/objects/pack/: pack-9eb325c3c8eb2668e887c7ea0033f37030c30a75.pack
RAGApp.git/: config
RAGApp.git/objects/pack/: pack-9eb325c3c8eb2668e887c7ea0033f37030c30a75.idx  pack-9eb325c3c8eb2668e887c7ea0033f37030c30a75.rev
WebRover/: main.py  pyproject.toml
WebRover/webrover.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
go-projects/go-bookstore/: go.mod
go-projects/go-bookstore/cmd/main/: main.go
go-projects/go-bookstore/pkg/config/: app.go
go-projects/go-bookstore/pkg/models/: book.go
go-projects/go-bookstore/pkg/routes/: bookstore-routes.go
go-projects/go-movie-crud/: go.mod  main.go
go-projects/go-server/: main.go
go-projects/go-server/static/: form.html  index.html
