[project]
name = "webrover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.4",
    "langchain-core>=1.0.2",
    "langchain[openai]>=1.0.3",
    "langchain-openai>=0.0.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
